@@ -41,38 +41,41 @@ sub init_chat {
         $aname =~ s/__*/_/g;
         $chat_name .= " (".$aname.")";
     }
-    if (0) {
-#    if ($empire->alliance_id) {
+    if ($empire->alliance_id) {
     	my $room = eval { $firebase->get('room-metadata/'.$empire->alliance_id) };
         if ($@) {
   	     warn bleep;
         }
         elsif (defined $room) {
-             eval {
+            eval {
             	$firebase->patch('room-metadata/'.$empire->alliance_id.'/authorizedUsers', {
                 	$empire->id => \1
-           	});
-	     };
-             if ($@) {
+           	    });
+	        };
+            if ($@) {
                 warn bleep;
-             }
+            }
         }
         else {
             eval { 
 	            $firebase->put('room-metadata/'.$empire->alliance_id, {
         	        id              => $empire->alliance_id,
-#                	name            => $empire->alliance->name,
                 	name            => $aname,
 	                type            => 'private',
         	        createdByUserId => $empire->id,
                 	'.priority'     => {'.sv' => 'timestamp'},
 	                authorizedUsers => {$empire->id => \1},
         	    });
-	    };
-	    if ($@) {
-		warn bleep;
-	    }
+	        };
+	        if ($@) {
+		        warn bleep;
+	        }
         }
+        $firebase->put('users/'.$empire->id.'/rooms/'.$empire->alliance_id, {
+            id      => $alliance_id,
+            active  => \1, 
+            name    => $aname,
+        });
     }
 #    if ($empire->is_admin) {
 #        $chat_name .= " <ADMIN>";
